[package]
name = "rscsg"
version = "0.2.0"
authors = ["Martin Sandgren <carlmartus@gmail.com>"]

[dependencies]
bitflags = "1.0"

[[example]]
name = "raytrace"
path = "examples/raytrace.rs"

[[example]]
name = "gl"
path = "examples/gl.rs"

[dev-dependencies]
smallpt = "0.1.12"
png = "0.12.0"
lingo = { git = "https://github.com/carlmartus/lingo.git" }
